// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/text-area/TextArea should not show optional text when hideOptionalLabel is true 1`] = `
<div
  className="text-area-container"
>
  <Label
    showOptionalText={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="bottom-left"
      text=""
      theme="error"
    >
      <textarea
        style={
          Object {
            "resize": "none",
          }
        }
      />
    </Tooltip>
  </Label>
</div>
`;

exports[`components/text-area/TextArea should show optional text when hideOptionalLabel is false 1`] = `
<div
  className="text-area-container"
>
  <Label
    showOptionalText={true}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="bottom-left"
      text=""
      theme="error"
    >
      <textarea
        style={
          Object {
            "resize": "none",
          }
        }
      />
    </Tooltip>
  </Label>
</div>
`;
